--- a/index.html
+++ b/index.html
@@ -34,5 +34,42 @@
         <a href="#" class="cta">Empieza ahora</a>
       </section>
     </header>
+    <main>
+      <section class="mi_container about">
+        <h2 class="subtittle">¿Qué aprenderás en HLC?</h2>
+        <p class="about_paragraph">
+          Todo lo necesario y obligatorio de HTML5, CSS3 y JavaScript. (Flexbox,
+          Grid, Custom properties, Position, Animaciones, Box Model y más)
+        </p>
+        <div class="about_main">
+          <article class="about_icons">
+            <img src="images/css3.svg" class="about_icon" />
+            <h3 class="about_title">CSS Layouts</h3>
+            <p class="about_paragrah">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Consequatur porro,
+            </p>
+          </article>
+
+          <article class="about_icons">
+            <img src="images/html5.svg" class="about_icon" />
+            <h3 class="about_title">HTML5</h3>
+            <p class="about_paragrah">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Consequatur porro,
+            </p>
+          </article>
+
+          <article class="about_icons">
+            <img src="images/javascript.svg" class="about_icon" />
+            <h3 class="about_title">JavaScript</h3>
+            <p class="about_paragrah">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Consequatur porro,
+            </p>
+          </article>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
