--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
           </article>
         </div>
       </section>
+
+      <section class="knowledge">
+        <div class="knowledge_container mi_container">
+          <div class="knowledege_texts">
+            <h2 class="subtittle">
+              Curso completo de CSS3. ¡Domina CSS de una vez por todas!
+            </h2>
+            <p class="knowledge_paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus
+              officiis molestiae blanditiis soluta reprehenderit libero rem,
+              odio quo in, ut omnis sed eveniet esse tenetur quisquam non?
+              Accusamus, quibusdam facere.
+            </p>
+            <a href="#" class="cta">Entra al curso</a>
+          </div>
+
+          <figure class="knowledge_picture">
+            <img src="images/mockup/Macbook - free.png" class="knowledge_img" />
+          </figure>
+        </div>
+      </section>
     </main>
   </body>
 </html>
