--- a/index.html
+++ b/index.html
@@ -91,6 +91,43 @@
           </figure>
         </div>
       </section>
+      
+      <section class="seccion">
+        <div class="mi_seccion">
+          <h3 class="titulo_seccion">Obtén el plan perfecto para aprender</h3>
+          <div class="seccion_creacion">
+            <article class="gris_layout layout">
+                <p>Flexbox</p>
+                <h4>Box Layout</h4>
+                <p>
+                    <ul>Flexbox</ul>
+                    <ul>Layouts</ul>
+                    <ul>Responsive</ul>
+                </p>
+                <a class="boton_gris boton" href="#">Empieza ahora</a>
+            </article>
+            <article class="naranja_layout layout">
+                <p>Grid</p>
+                <h4>Grid layout</h4>
+                <p>
+                    <ul>Grid</ul>
+                    <ul>Implicit Grid</ul>
+                    <ul>Responsive</ul>
+                </p>
+                <a class="boton_naranja boton" href="#">Empieza ahora</a>
+            </article>
+            <article class="gris_layout layout">
+                <p>Animaciones</p>
+                <h4>css3</h4>
+                <p>
+                    <ul>Animation</ul>
+                    <ul>Transition</ul>
+                    <ul>Render Website</ul>
+                </p>
+                <a class="boton_gris boton" href="#">Empieza ahora</a>
+            </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
