--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
 
           <figure class="knowledge_picture">
-            <img src="images/mockup/Macbook - free.png" class="knowledge_img" />
+            <img src="images/Macbook-free.png" class="knowledge_img" />
           </figure>
         </div>
       </section>
@@ -121,11 +121,83 @@
                 <h4>css3</h4>
                 <p>
                     <ul>Animation</ul>
-                    <ul>Transition</ul>
+          <section class="testimony_body testimony_body--show" data-id="1"=""></section>
+          <ul>Transition</ul>
                     <ul>Render Website</ul>
                 </p>
                 <a class="boton_gris boton" href="#">Empieza ahora</a>
             </article>
+        </div>
+      </section>
+
+      <section class="testimony">
+        <div class="testimony_container mi_container">
+          <img src="images/flecha_izquierda.svg" class="testimony_arrow" id="before">
+          <section class="testimony_body testimony_body--show" data-id="1">
+            <div class="testimony_texts">
+              <h2 class="subtitle">
+                Mi nombre es María Sánchez,
+                <span class="testimony_course">estudiante de CSS</span>
+              </h2>
+              <p class="testimony_review">Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Illum dolor quam incidunt blanditiis. Excepturi soluta vitae 
+                quam dolores voluptatum alias earum ut! Ipsam perferendis commodi 
+                sint quod consequatur,facilis accusamus.
+              </p>
+            </div>
+            <figure class="testimony_picture">
+              <img src="images/face1.jpg" alt="" class="testimony_img">
+            </figure>
+          </section>
+          <section class="testimony_body" data-id="2">
+            <div class="testimony_texts">
+              <h2 class="subtitle">
+                Mi nombre es Jhon Marquez,
+                <span class="testimony_course">estudiante de CSS</span>
+              </h2>
+              <p class="testimony_review">Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Illum dolor quam incidunt blanditiis. Excepturi soluta vitae 
+                quam dolores voluptatum alias earum ut! Ipsam perferendis commodi 
+                sint quod consequatur,facilis accusamus.
+              </p>
+            </div>
+            <figure class="testimony_picture">
+              <img src="images/face2.jpg" alt="" class="testimony_img">
+            </figure>
+          </section>
+          <section class="testimony_body" data-id="3">
+            <div class="testimony_texts">
+              <h2 class="subtitle">
+                Mi nombre es Lucilda Gamez,
+                <span class="testimony_course">estudiante de CSS</span>
+              </h2>
+              <p class="testimony_review">Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Illum dolor quam incidunt blanditiis. Excepturi soluta vitae 
+                quam dolores voluptatum alias earum ut! Ipsam perferendis commodi 
+                sint quod consequatur,facilis accusamus.
+              </p>
+            </div>
+            <figure class="testimony_picture">
+              <img src="images/face3.jpg" alt="" class="testimony_img">
+            </figure>
+          </section>
+          <section class="testimony_body" data-id="4">
+            <div class="testimony_texts">
+              <h2 class="subtitle">
+                Mi nombre es Naiara López,
+                <span class="testimony_course">estudiante de CSS</span>
+              </h2>
+              <p class="testimony_review">Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Illum dolor quam incidunt blanditiis. Excepturi soluta vitae 
+                quam dolores voluptatum alias earum ut! Ipsam perferendis commodi 
+                sint quod consequatur,facilis accusamus.
+              </p>
+            </div>
+            <figure class="testimony_picture">
+              <img src="images/face4.jpg" alt="" class="testimony_img">
+            </figure>
+          </section> 
+          <img src="images/flecha_derecha.svg" class="testimony_arrow" id="next">
         </div>
       </section>
     </main>
