--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </section>
       
       <section class="seccion">
-        <div class="mi_seccion">
+        <section class="mi_seccion">
           <h3 class="titulo_seccion">Obtén el plan perfecto para aprender</h3>
           <div class="seccion_creacion">
             <article class="gris_layout layout">
@@ -121,8 +121,7 @@
                 <h4>css3</h4>
                 <p>
                     <ul>Animation</ul>
-          <section class="testimony_body testimony_body--show" data-id="1"=""></section>
-          <ul>Transition</ul>
+                    <ul>Transition</ul>
                     <ul>Render Website</ul>
                 </p>
                 <a class="boton_gris boton" href="#">Empieza ahora</a>
