--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       
       <section class="seccion">
         <section class="mi_seccion">
-          <h3 class="titulo_seccion">Obtén el plan perfecto para aprender</h3>
+          <h3 class="subtittle titulo_seccion">Obtén el plan perfecto para aprender</h3>
           <div class="seccion_creacion">
             <article class="gris_layout layout">
                 <p>Flexbox</p>
@@ -134,7 +134,7 @@
           <img src="images/flecha_izquierda.svg" class="testimony_arrow" id="before">
           <section class="testimony_body testimony_body--show" data-id="1">
             <div class="testimony_texts">
-              <h2 class="subtitle">
+              <h2 class="subtittle">
                 Mi nombre es María Sánchez,
                 <span class="testimony_course">estudiante de CSS</span>
               </h2>
@@ -150,7 +150,7 @@
           </section>
           <section class="testimony_body" data-id="2">
             <div class="testimony_texts">
-              <h2 class="subtitle">
+              <h2 class="subtittle">
                 Mi nombre es Jhon Marquez,
                 <span class="testimony_course">estudiante de CSS</span>
               </h2>
@@ -166,7 +166,7 @@
           </section>
           <section class="testimony_body" data-id="3">
             <div class="testimony_texts">
-              <h2 class="subtitle">
+              <h2 class="subtittle">
                 Mi nombre es Lucilda Gamez,
                 <span class="testimony_course">estudiante de CSS</span>
               </h2>
@@ -182,7 +182,7 @@
           </section>
           <section class="testimony_body" data-id="4">
             <div class="testimony_texts">
-              <h2 class="subtitle">
+              <h2 class="subtittle">
                 Mi nombre es Naiara López,
                 <span class="testimony_course">estudiante de CSS</span>
               </h2>
@@ -199,6 +199,98 @@
           <img src="images/flecha_derecha.svg" class="testimony_arrow" id="next">
         </div>
       </section>
+
+      <section class="questions mi_container">
+        <h2 class="subtittle">Preguntas frecuentes</h2>
+        <p class="questions_paragraph">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, porro
+          doloribus neque perspiciatis sapiente fuga.
+        </p>
+
+
+        <section class="questions_container">
+          <article class="questions_padding">
+            <div class="questions_answer">
+              <h3 class="questions_title">
+                ¿Qué es CSS?
+                <span class="questions_arrow">
+                  <img src="./images/arrow.svg" class="questions_img" />
+                </span>
+              </h3>
+
+              <p class="questions_show">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+                facere, quidem eum id excepturi assumenda explicabo nam
+                accusamus veritatis voluptates eveniet adipisci, dicta nihil
+                nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Quos facere, quidem eum id
+                excepturi assumenda explicabo nam accusamus veritatis voluptates
+                eveniet adipisci, dicta nihil nemo modi possimus officiis quam
+                atque?
+              </p>
+            </div>
+          </article>
+
+          <article class="questions_padding">
+            <div class="questions_answer">
+              <h3 class="questions_title">
+                ¿Qué aprenderé en este curso?
+                <span class="questions_arrow">
+                  <img src="./images/arrow.svg" class="questions_img" />
+                </span>
+              </h3>
+
+
+              <p class="questions_show">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+                facere, quidem eum id excepturi assumenda explicabo nam
+                accusamus veritatis voluptates eveniet adipisci, dicta nihil
+                nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Quos facere, quidem eum id
+                excepturi assumenda explicabo nam accusamus veritatis voluptates
+                eveniet adipisci, dicta nihil nemo modi possimus officiis quam
+                atque?
+              </p>
+            </div>
+          </article>
+
+          <article class="questions_padding">
+            <div class="questions_answer">
+              <h3 class="questions_title">
+                ¿Qué es CSS GRID?
+                <span class="questions_arrow">
+                  <img src="./images/arrow.svg" class="questions_img" />
+                </span>
+              </h3>
+
+
+              <p class="questions_show">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+                facere, quidem eum id excepturi assumenda explicabo nam
+                accusamus veritatis voluptates eveniet adipisci, dicta nihil
+                nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Quos facere, quidem eum id
+                excepturi assumenda explicabo nam accusamus veritatis voluptates
+                eveniet adipisci, dicta nihil nemo modi possimus officiis quam
+                atque?
+              </p>
+            </div>
+          </article>
+        </section>
+
+        <section class="questions_offer">
+          <h2 class="subtittle">¿Estas listo para aprender CSS?</h2>
+          <p class="questions_copy">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+            ratione architecto magnam, officiis ex porro vero est voluptates
+            quaerat quibusdam illo veniam reprehenderit eius atque tempora iure
+            ab non autem.
+          </p>
+          <a href="#" class="cta">Aprende ahora</a>
+        </section>
+      </section>
+
     </main>
+    <script src="JS/sliders.js"></script>
   </body>
 </html>
